# c_utils

./: CMakeLists.txt  README.md
include/: algorithm.h  common_math.h  io.h  linspace.h  memory.h  ranges.h  str.h  transform.h  utility_macros.h
src/: CMakeLists.txt  algorithm.c  common_math.c  io.c  main.c  memory.c  ranges.c  str.c
src/algorithms/: CMakeLists.txt  linspace.c  transform.c
