add_library(io io.c)
target_include_directories(io PUBLIC "${PROJECT_SOURCE_DIR}/include")
add_library(str str.c)
target_include_directories(str PUBLIC "${PROJECT_SOURCE_DIR}/include")
add_subdirectory(algorithms)
add_library(algorithm algorithm.c)
target_link_libraries(algorithm PUBLIC linspace)
target_include_directories(algorithm PUBLIC "${PROJECT_SOURCE_DIR}/include")
